Fixing bug 26528 "cloneNode() doesn't copy event handlers". r=brendan@mozilla.org sr=jst@netscape.com a=asa@mozilla.org This patch causes event handlers set as attributes on an element to be registered as event handlers on the cloned element as well. This patch also fixes bug 71937 "value of cloned input type=button is not displayed correctly".